--- a/configure/playbooks/roles/nginx/templates/nginx.j2
+++ b/configure/playbooks/roles/nginx/templates/nginx.j2
@@ -21,8 +21,8 @@ stream {
 
 http {
     server_names_hash_bucket_size  128;
-    #sendfile            off;
-    sendfile            on; # can cause a problem in VirtualBox
+    sendfile            off;
+#    sendfile            on; can cause a problem in VirtualBox
     tcp_nopush          on;
     tcp_nodelay         on;
     keepalive_timeout   65;
