--- a/configure/playbooks/roles/test-multiple_xnat_users/templates/.netrc-testuser.j2
+++ b/configure/playbooks/roles/test-multiple_xnat_users/templates/.netrc-testuser.j2
@@ -1,3 +1,3 @@
 machine {{ xnat_web_server.host }}
-    login {{ username }}
-    password {{ password }}
+    login {{ user_name }}
+    password {{ user_password }}
